[package]
name = "d2statfind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.6.0"
serde = { version = "1.0.160", features = ["derive"], default-features = false }
serde_cbor = "0.11.2"
rustgie_types = { git = "https://github.com/BarmonHammer/rustgie.git", default-features = false }
serde_repr = "0.1.12"

[dev-dependencies]
chrono = "0.4.24"

[profile.release]
opt-level="z"
strip = "symbols"
lto = true
panic = "abort"
