[package]
name = "d2_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.6.0"
serde = { version = "1.0.160", features = ["derive"], default-features = false }
serde_cbor = "0.11.2"
serde_repr = "0.1.12"
wasm-bindgen = { version = "0.2.84", features = ["serde_json", "serde", "serde-serialize"] }
d2_minify = {git = "https://github.com/D2-Insight/d2_minify.git", features = ["serde"]}
lol_alloc = "0.4.0"
web-sys = { version = "0.3.61", features = ["Storage", "Window"] }

[dev-dependencies]
chrono = "0.4.24"

[profile.release]
opt-level="z"
strip = "symbols"
lto = true
panic = "abort"


[features]
wasm = []
